# study

./: .gitignore
C++/coroutine_lib/: CMakeLists.txt  coroutine_context_arm64.h  main.cpp  stack_allocator_win.cpp  stack_allocator_win.h  stack_coroutine.cpp  stack_coroutine.h  swap_context_arm64.h  swap_context_x64.h
ai-generated/calculator/: .clang-format  CMakeLists.txt
ai-generated/calculator/.claude/: CLAUDE.md
ai-generated/calculator/.claude/rules/: coding-style.md
ai-generated/calculator/include/calculator/: token.h
ai-generated/calculator/openspec/: config.yaml
ai-generated/calculator/openspec/changes/archive/2026-06-05-calculator-cli/: design.md  proposal.md  tasks.md
ai-generated/calculator/openspec/changes/archive/2026-06-05-interactive-prompt-style/: design.md  proposal.md  tasks.md
ai-generated/calculator/openspec/changes/archive/2026-06-06-support-input-history/: design.md  tasks.md
ai-generated/calculator/openspec/changes/archive/2026-06-07-scientific-functions-constants/: design.md  proposal.md  tasks.md
ai-generated/calculator/openspec/changes/archive/2026-06-10-cli-expression-args/: design.md  proposal.md  tasks.md
ai-generated/calculator/openspec/changes/support-input-history/: proposal.md
ai-generated/calculator/openspec/specs/build-system/: spec.md
ai-generated/calculator/openspec/specs/calculator-engine/: spec.md
ai-generated/calculator/openspec/specs/cli-expression-args/: spec.md
ai-generated/calculator/openspec/specs/cli-interface/: spec.md
ai-generated/calculator/openspec/specs/expression-parser/: spec.md
ai-generated/calculator/openspec/specs/input-history/: spec.md
ai-generated/calculator/openspec/specs/math-constants/: spec.md
ai-generated/calculator/openspec/specs/scientific-functions/: spec.md
ai-generated/calculator/src/: CMakeLists.txt  ast.h  evaluator.cc  evaluator.h  input_reader.cc  input_reader.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  repl.cc  repl.h  result.h  token.h
ai-generated/calculator/test/: CMakeLists.txt  ast_test.cc  evaluator_test.cc  input_reader_test.cc  integration_test.cc  lexer_test.cc  linenoise_reader_test.cc  parser_test.cc  repl_test.cc  result_test.cc  token_test.cc
ai-generated/lisp-interpreter-v2/: .clang-format  CMakeLists.txt  commit.sh  test.lisp
ai-generated/lisp-interpreter-v2/.claude/: settings.json
ai-generated/lisp-interpreter-v2/.claude/commands/: commit.md
ai-generated/lisp-interpreter-v2/.claude/hooks/: format.sh
ai-generated/lisp-interpreter-v2/.claude/rules/: coding-style.md
ai-generated/lisp-interpreter-v2/include/: builtins.h  environment.h  evaluator.h  parser.h
ai-generated/lisp-interpreter-v2/openspec/changes/archive/2026-05-06-lisp-interpreter/: design.md  proposal.md  tasks.md
ai-generated/lisp-interpreter-v2/openspec/changes/archive/2026-05-09-extract-builtin-dispatch/: design.md  proposal.md  tasks.md
ai-generated/lisp-interpreter-v2/openspec/changes/archive/2026-05-09-move-include-to-src/: design.md  proposal.md  tasks.md
ai-generated/lisp-interpreter-v2/openspec/changes/archive/2026-05-10-add-define-lambda-sugar/: design.md  proposal.md  tasks.md
ai-generated/lisp-interpreter-v2/openspec/specs/build-system/: spec.md
ai-generated/lisp-interpreter-v2/openspec/specs/evaluator/: spec.md
ai-generated/lisp-interpreter-v2/openspec/specs/file-executor/: spec.md
ai-generated/lisp-interpreter-v2/openspec/specs/lexer/: spec.md
ai-generated/lisp-interpreter-v2/openspec/specs/parser/: spec.md
ai-generated/lisp-interpreter-v2/openspec/specs/repl/: spec.md
ai-generated/lisp-interpreter-v2/src/: builtins.cc  builtins.h  environment.cc  evaluator.cc  evaluator.h  lisp.l  lisp.y  main.cc  parser.cc  repl.cc  repl.h  value.cc  value.h
cpp/cef_osr_win64/cefosr/: CMakeLists.txt  osr_app.cc  osr_app.h  osr_d3d11.cc  osr_d3d11.h  osr_ime_handler.h  osr_input_handler.cc  osr_input_handler.h  osr_render_handler.cc  osr_render_handler.h  osr_render_handler_d3d11.cc  osr_render_handler_d3d11.h  osr_render_handler_gl.cc  osr_render_handler_gl.h  osr_renderer.cc  osr_renderer.h  osr_renderer_settings.h  osr_utils.cc  osr_utils.h  osr_window.cc  osr_window.h  readme.md  resource.h
cpp/chrome_window/: CMakeLists.txt  Readme.md  main.h  resource.h
cpp/exception_study/: CMakeLists.txt  main.cpp
cpp/flex_bison_study/: CMakeLists.txt  fb.c  fb.h  fb.l  fb.y  fb.y.1  main.c  main.cc
cpp/gl_playground/: CMakeLists.txt  main.cpp  shader.h
cpp/gl_playground/glad/include/glad/: glad.h
cpp/gl_playground/glad/src/: glad.c
cpp/playground/: CMakeLists.txt  advanced_feature_study.h  async_await_study.h  coroutine_study.h  exception_study.h  main.cpp  meta_programming_study.h  multithread.h  preload_file.h  ranges_study.h  reflection.cc  reflection.h  reflection_macros.inl  reflection_object.inl  reflection_sample.cc  reflection_sample.h  shared_ptr_study.h
cpp/playground/async/: async_await_study.h
cpp/playground/lib/: utils.cc
cpp/playground/mac/: sck_capture.h  sck_capture.mm  screen_capture.cpp  screen_capture.h  utils.h  utils.mm
cpp/playground/windows/: capture.md  dxgi_capture.cpp  dxgi_capture.h  screen_capture.cpp  screen_capture.h  terminal.cpp  terminal.h  wgc_capture.cpp  wgc_capture.h  wgc_capture_with_cppwinrt.cpp  wgc_capture_with_cppwinrt.h  wgc_capture_with_wrl.cpp  wgc_capture_with_wrl.h
cpp/vis_test/: CMakeLists.txt  add.cpp  dyn_lib.cpp  lib.cpp  main.cpp
cpp/webview2_composition_sample/: CMakeLists.txt  composition_window.cc  composition_window.h  main.cc
kotlin/mp_playground/app/macos_native/: CMakeLists.txt  Info.plist  macos_lib.h  macos_lib.mm
kotlin/mp_playground/app/native/: CMakeLists.txt  simple_lib.c  simple_lib.h
kotlin/mp_playground/lib/macos_native/: CMakeLists.txt  main.mm
kotlin/mp_playground/lib/native/: CMakeLists.txt  main.cc
macos/playground/: .gitignore  CMakeLists.txt  Info.plist  Package.swift  conanfile.txt  readme.md
macos/playground/src/: AppDelegate.swift  MainWindow.swift  SwiftBridge.h  SwiftBridge.mm  main.cc
nodejs/: coroutine.js
parser/: lex.yy.c  module.js  (+3 more)
(+323 files in other folders)
